<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_exercise">Lista de Exercícios</string>
    <string name="first_fragment_label">Fragment List</string>
    <string name="no_exercise_title">Lista vazia</string>
    <string name="no_exercise_subtitle">Nenhum exercício cadastrado no momento.</string>
    <string name="erro_list_exercise_subtitle">Não foi possível listar os exercícios nesse momento.</string>
    <string name="erro_list_exercise_title">Ops! Deu Erro.</string>
    <string name="loading_exercise">Carregando exercícios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirmar</string>
    <string name="back">Costas</string>
    <string name="biceps">Bíceps</string>
    <string name="triceps">Tríceps</string>
    <string name="chester">Peitoral</string>
    <string name="shoulder">Ombro</string>
    <string name="legs">Perna</string>
    <string name="muscle">Músculo Trabalhado</string>
    <string name="exercie_name">Rosca direta</string>
    <string name="exercise">Exercício</string>
    <string name="name">Nome</string>
</resources>